--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/drawer": "^7.5.2",
     "expo": "~53.0.11",
+    "expo-blur": "^14.1.5",
+    "expo-router": "~5.1.0",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.3",
-    "expo-router": "~5.1.0"
+    "react-native-gesture-handler": "^2.27.1",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-snap-carousel": "^3.9.1",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
