--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-native-gesture-handler": "^2.27.1",
     "react-native-reanimated": "~3.17.4",
     "react-native-snap-carousel": "^3.9.1",
-    "zustand": "^5.0.6"
+    "zustand": "^5.0.6",
+    "@shopify/react-native-skia": "v2.0.0-next.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
