--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-snap-carousel": "^3.9.1",
     "zustand": "^5.0.6",
-    "@shopify/react-native-skia": "v2.0.0-next.4"
+    "@shopify/react-native-skia": "v2.0.0-next.4",
+    "expo-linear-gradient": "~14.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
